--- a/src/main/resources/stylesheets/application.css
+++ b/src/main/resources/stylesheets/application.css
@@ -35,6 +35,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 }
 #scrollarea {
     -fx-background-color: #f3f3f3;
+    -fx-background-insets: 0;
+    -fx-padding: 0;
 }
 #statusbar {
     -fx-background-color: #f3f3f3;
